<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="275dp"
    android:layout_height="275dp">

    <TextView
        android:id="@+id/event_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_details"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/start_time_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/am_start"
        app:layout_constraintTop_toBottomOf="@id/event_tv" />

    <Button
        android:id="@+id/am_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am"
        app:layout_constraintLeft_toRightOf="@id/start_time_et"
        app:layout_constraintRight_toLeftOf="@id/pm_start"
        app:layout_constraintTop_toBottomOf="@id/event_tv" />

    <Button
        android:id="@+id/pm_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm"
        app:layout_constraintLeft_toRightOf="@id/am_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_tv" />

    <EditText
        android:id="@+id/end_time_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/am_end"
        app:layout_constraintTop_toBottomOf="@id/start_time_et" />

    <Button
        android:id="@+id/am_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am"
        app:layout_constraintLeft_toRightOf="@id/end_time_et"
        app:layout_constraintRight_toLeftOf="@id/pm_end"
        app:layout_constraintTop_toBottomOf="@id/am_start" />

    <Button
        android:id="@+id/pm_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm"
        app:layout_constraintLeft_toRightOf="@id/am_end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm_start" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm_end" />
</android.support.constraint.ConstraintLayout>